--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "stdbool.h": "c",
         "vga.h": "c",
         "paging.h": "c",
-        "gdt.h": "c"
+        "gdt.h": "c",
+        "multiboot.h": "c",
+        "k_heap.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
