--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "gdt.h": "c",
         "multiboot.h": "c",
         "k_heap.h": "c",
-        "16tty.h": "c"
+        "16tty.h": "c",
+        "lkmain.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
