--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,14 @@
         "ranges": "c",
         "utility": "c",
         "random": "c",
-        "kb.h": "c"
+        "kb.h": "c",
+        "elf.h": "c",
+        "syscalls.h": "c",
+        "stat.h": "c",
+        "vfs.h": "c",
+        "process.h": "c"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "C_Cpp.default.compilerPath": "", 
+    
 }
