--- a/src/userspace/init/makefile
+++ b/src/userspace/init/makefile
@@ -2,5 +2,5 @@ CFLAGS = -g -c -Wall -Wextra  -m32
 default: start.asm main.c
 	nasm -f elf32 -g start.asm -o start.o
 	i686-elf-gcc $(CFLAGS) main.c -o main.o
-	i686-elf-ld -T linker.ld start.o main.o -o userprogram.elf
-	cp userprogram.elf ../../build/
+	i686-elf-ld -T linker.ld start.o main.o -o init 
+	cp init ../../../build/init_bin/
