fork-execve seems towork fine, i'am able to create a dublicate of a running process in a seperate address space. pipe, getpid, and various syscalls are also present. for userspace to prevent code duplication on the source and ease of use libsilk is created. more pci functions are written, a half ass virtio gpu device is akso present altough it changes the satae virtqueu's are mess and not working, tries to parse some acpi info

--- a/src/userspace/shell/makefile
+++ b/src/userspace/shell/makefile
@@ -1,6 +1,8 @@
-CFLAGS = -g -c -Wall -Wextra  -m32
+CFLAGS = -g -c -Wall -Wextra  -m32 -fno-builtin -I ../libsilk/include/
+LDFLAGS = -T linker.ld -l:libsilk.a -L ../libsilk
+
 default: start.asm main.c
 	nasm -f elf32 -g start.asm -o start.o
 	i686-elf-gcc $(CFLAGS) main.c -o main.o
-	i686-elf-ld -T linker.ld start.o main.o -o sh
+	i686-elf-ld -o sh start.o main.o $(LDFLAGS)
 	cp sh ../../../build/init_bin/
