--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,20 @@
 {
+    "C_Cpp.default.compilerPath": "/home/muro/opt/cross/gcc-i686/bin/i686-elf-gcc",
     "files.associations": {
-        "stddef.h": "c",
-        "system.h": "c",
-        "stdbool.h": "c",
-        "vga.h": "c",
-        "paging.h": "c",
-        "gdt.h": "c",
-        "multiboot.h": "c",
-        "k_heap.h": "c",
-        "16tty.h": "c",
-        "lkmain.h": "c",
-        "idt.h": "c",
-        "sys.h": "c",
-        "uart.h": "c",
-        "irq.h": "c",
-        "str.h": "c",
-        "pmm.h": "c",
         "stdint.h": "c",
-        "tar.h": "c",
+        "stdint-gcc.h": "c",
         "acpi.h": "c",
-        "isr.h": "c",
-        "array": "c",
-        "string_view": "c",
-        "initializer_list": "c",
-        "ranges": "c",
-        "utility": "c",
-        "random": "c",
-        "kb.h": "c",
-        "elf.h": "c",
-        "syscalls.h": "c",
+        "lkmain.h": "c",
+        "str.h": "c",
+        "stdlib.h": "c",
+        "string.h": "c",
+        "syscall.h": "c",
+        "unistd.h": "c",
         "stat.h": "c",
-        "vfs.h": "c",
-        "process.h": "c"
-    },
-    "C_Cpp.errorSquiggles": "disabled",
-    "C_Cpp.default.compilerPath": "", 
+        "pmm.h": "c",
+        "stdio.h": "c",
+        "wait.h": "c",
+        "syscalls.h": "c"
+    }
     
 }
