--- a/src/userspace/init/makefile
+++ b/src/userspace/init/makefile
@@ -1,6 +1,9 @@
-CFLAGS = -g -c -Wall -Wextra  -m32
+CFLAGS = -g -c -Wall -Wextra  -m32 -fno-builtin -I ../libsilk/include/
+LDFLAGS = -T linker.ld -l:libsilk.a -L ../libsilk
+
 default: start.asm main.c
 	nasm -f elf32 -g start.asm -o start.o
 	i686-elf-gcc $(CFLAGS) main.c -o main.o
-	i686-elf-ld -T linker.ld start.o main.o -o init 
+	i686-elf-ld -o init  start.o main.o $(LDFLAGS)
 	cp init ../../../build/init_bin/
+
