struggle with v86 and vesa is real, i tried to create kernelmode thread and makeit jump to v86 and comeback with data but it's not working. general tree and vfs header added but its not working, lots of syscalls are implemented. ansi escape codes for kernel supplied console fine, colours and more precise cursor controls added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,17 @@
         "pmm.h": "c",
         "stdio.h": "c",
         "wait.h": "c",
-        "syscalls.h": "c"
+        "syscalls.h": "c",
+        "ps2_mouse.h": "c",
+        "signals.h": "c",
+        "pipe.h": "c",
+        "process.h": "c",
+        "circular_buffer.h": "c",
+        "glyph.h": "c",
+        "vmm.h": "c",
+        "ata.h": "c",
+        "sysinfo.h": "c",
+        "v86.h": "c"
     }
     
 }
