various changes, implemented an ata driver so harddrive can be read and written to. implemented MBR partiotioning scheme, it can detect partitions while initializing and registering ata drives.FAT32 driver is more polished it can list longnames and read files and execute binaries from fat32 however writing is not functional at this stage. ext2 exists as a name doesn't haave proper implementation, whole vfs and fs section needs restructuring for further developments. vfs_mount exposed as a syscall so userspace can mount block devices on the filesystem. device subsystem needs to be structured into device number so that special files in other filesystem can be used instead of a special nodes in devfs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,15 @@
         "vmm.h": "c",
         "ata.h": "c",
         "sysinfo.h": "c",
-        "v86.h": "c"
+        "v86.h": "c",
+        "dev.h": "c",
+        "nulldev.h": "c",
+        "vfs.h": "c",
+        "tar.h": "c",
+        "sys.h": "c",
+        "uart.h": "c",
+        "semaphore.h": "c",
+        "queue.h": "c"
     }
     
 }
