cracked the tmpfs file system that we can just unpack the initrd into the tmpfs and remove it entirely, tmpfs currently supports creation of regular files and directories. Implemented ext2 file system as readonly and max filesize of 48kB because not indirect block pointers were used. tried to implement BGA but stuck due to how kernel should handle the boot framebuffer device like should it upgrade to a new driver or never register it for userspace ? couldn't decide. Added support for ioctl. Fixed memory bugs in kernel heap allocator so it works flawlesly. Implemented some sort of vmm manager by finding n free virtual pages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,13 @@
         "sys.h": "c",
         "uart.h": "c",
         "semaphore.h": "c",
-        "queue.h": "c"
+        "queue.h": "c",
+        "tty.h": "c",
+        "token.h": "c",
+        "fs.h": "c",
+        "isr.h": "c",
+        "ps2.h": "c",
+        "idt.h": "c"
     }
     
 }
