added fpu state to the process block so each process would retain the fpu state, pseudo-terminals are more stable and is seems to be stable, olive.c and donut.c are used for userspace programs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,9 @@
         "types.h": "c",
         "inttypes.h": "c",
         "stddef.h": "c",
-        "netif.h": "c"
+        "netif.h": "c",
+        "cmos.h": "c",
+        "show.h": "c"
     }
     
 }
